<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@color/white"
    android:gravity="bottom|center_horizontal"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvChooseTableTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/add_order_message"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etOrderMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/add_dishe_background"
        android:elevation="4dp"
        android:hint="@string/observation"
        android:imeOptions="actionSend"
        android:inputType="textMultiLine"
        android:minHeight="200dp"
        android:textAlignment="center"
        android:textColor="@color/black_600" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btSaveMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/orange_500"
        android:paddingHorizontal="30dp"
        android:paddingVertical="12dp"
        android:text="@string/save"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="8dp" />

</androidx.appcompat.widget.LinearLayoutCompat>
