<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clHomeMenu"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/orange_500"
    android:elevation="2dp"
    android:paddingHorizontal="10dp"
    android:paddingTop="10dp"
    android:paddingBottom="20dp"
    android:visibility="invisible"
    tools:visibility="visible">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivFork"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginTop="10dp"
        android:padding="3dp"
        android:src="@drawable/ic_fork"
        android:tint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/menu"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/ivFork"
        app:layout_constraintStart_toEndOf="@id/ivFork"
        app:layout_constraintTop_toTopOf="@id/ivFork" />

    <View
        android:id="@+id/vFork"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="-10dp"
        android:layout_marginEnd="-10dp"
        app:layout_constraintBottom_toBottomOf="@id/ivFork"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/ivFork" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivOrder"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginTop="14dp"
        android:src="@drawable/ic_bill"
        android:tint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivFork" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/orders"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/ivOrder"
        app:layout_constraintStart_toEndOf="@id/ivOrder"
        app:layout_constraintTop_toTopOf="@id/ivOrder" />

    <View
        android:id="@+id/vOrder"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="-10dp"
        android:layout_marginEnd="-10dp"
        app:layout_constraintBottom_toBottomOf="@id/ivOrder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/ivOrder" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivTable"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginTop="14dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_restaurant"
        android:tint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivOrder" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/tables"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/ivTable"
        app:layout_constraintStart_toEndOf="@id/ivTable"
        app:layout_constraintTop_toTopOf="@id/ivTable" />

    <View
        android:id="@+id/vTable"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="-10dp"
        android:layout_marginEnd="-10dp"
        app:layout_constraintBottom_toBottomOf="@id/ivTable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/ivTable" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivLogout"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginTop="14dp"
        android:padding="4dp"
        android:src="@drawable/ic_close"
        android:tint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivTable" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/ivLogout"
        app:layout_constraintStart_toEndOf="@id/ivLogout"
        app:layout_constraintTop_toTopOf="@id/ivLogout" />

    <View
        android:id="@+id/vLogout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="-10dp"
        android:layout_marginEnd="-10dp"
        app:layout_constraintBottom_toBottomOf="@id/ivLogout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/ivLogout" />

</androidx.constraintlayout.widget.ConstraintLayout>